# pytorch-cloud

./: .gitignore  .hadolint.yaml  .shellcheckrc  .tofu-warning  .yamllint  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  mise.toml  pyproject.toml  setup.sh
.github/workflows/: ci.yaml  deploy.yaml  docker-publish.yaml
ami/eks-base/: packer.pkr.hcl
ami/eks-gpu/: packer.pkr.hcl
docker/runner-base/: Dockerfile
docker/runner-gpu/: Dockerfile
docs/: GPU-SETUP.md  HELM-LINTING-EXPLAINED.md  LINTING.md  PROJECT-LOCAL-TOOLS.md  PROJECT-STRUCTURE.md  QUICKSTART.md  SETUP-CHECKLIST.md
helm/arc/: values-production.yaml  values-staging.yaml  values.yaml
helm/arc-gpu-runners/: values-production.yaml  values-staging.yaml  values.yaml
helm/arc-runners/: values-production.yaml  values-staging.yaml  values.yaml
helm/karpenter/: values-production.yaml  values-staging.yaml  values.yaml
helm/runners/: cpu-large-production.yaml  cpu-large-staging.yaml  cpu-medium-production.yaml  cpu-medium-staging.yaml  cpu-small-production.yaml  cpu-small-staging.yaml  gpu-t4-production.yaml  gpu-t4-staging.yaml
kubernetes/base/: kustomization.yaml  namespace.yaml  nvidia-device-plugin.yaml  runner-hooks-configmap.yaml
kubernetes/overlays/production/: kustomization.yaml
python/: README.md
runners/: cpu-small.yaml  gpu-t4.yaml
runners/base/: cpu-large.yaml  cpu-medium.yaml  kustomization.yaml
runners/nodepools/: cpu.yaml  gpu-t4.yaml
scripts/bootstrap/: eks-base-bootstrap.sh  eks-cpu-bootstrap.sh  eks-gpu-bootstrap.sh
scripts/hooks/: post-job.sh  pre-job.sh
(+25 files in other folders)
